This adds fixes scrollbar and some bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@
     @apply bg-background font-sans text-foreground;
     @apply flex h-screen min-h-screen flex-col;
   }
-/* 
+  /* 
   .blob {
     background-image: url('../assets/Hero-bg.png');
     background-repeat: space;
@@ -85,4 +85,24 @@
     background-position: top;
     background-attachment: fixed;
   } */
+}
+.scrollbar-thin::-webkit-scrollbar {
+  @apply w-1;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  @apply bg-gray-500 rounded-xl;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-700;
+}
+
+.scrollbar-thin {
+  scrollbar-width: thin;
+  scrollbar-color: #2e2f30 #e5e7eb00;
 }
